@@ -1,6 +1,7 @@
 package io.quarkus.arc.runtime;
 
 import java.lang.annotation.Annotation;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.function.Supplier;
 
@@ -10,19 +11,29 @@ import io.quarkus.arc.ArcContainer;
 import io.quarkus.arc.InstanceHandle;
 import io.quarkus.arc.ManagedContext;
 
-public class BeanContainerImpl implements BeanContainer {
+class BeanContainerImpl implements BeanContainer {
 
     private static final Logger LOGGER = Logger.getLogger(BeanContainerImpl.class.getName());
 
     private final ArcContainer container;
 
-    public BeanContainerImpl(ArcContainer container) {
+    BeanContainerImpl(ArcContainer container) {
         this.container = container;
+    }
+
+    @Override
+    public <T> Factory<T> beanInstanceFactory(Class<T> type, Annotation... qualifiers) {
+        Supplier<InstanceHandle<T>> handleSupplier = container.beanInstanceSupplier(type, qualifiers);
+        return createFactory(handleSupplier, type, qualifiers);
     }
 
     @Override
     public <T> Factory<T> instanceFactory(Class<T> type, Annotation... qualifiers) {
         Supplier<InstanceHandle<T>> handleSupplier = container.instanceSupplier(type, qualifiers);
+        return createFactory(handleSupplier, type, qualifiers);
+    }
+
+    private <T> Factory<T> createFactory(Supplier<InstanceHandle<T>> handleSupplier, Class<T> type, Annotation... qualifiers) {
         if (handleSupplier == null) {
             LOGGER.debugf(
                     "No matching bean found for type %s and qualifiers %s. The bean might have been marked as unused and removed during build.",
@@ -53,9 +64,9 @@ public class BeanContainerImpl implements BeanContainer {
         return container.requestContext();
     }
 
-    static final class DefaultInstanceFactory<T> implements BeanContainer.Factory<T> {
+    private static final class DefaultInstanceFactory<T> implements BeanContainer.Factory<T> {
 
-        final Class<T> type;
+        private final Class<T> type;
 
         DefaultInstanceFactory(Class<T> type) {
             this.type = type;
@@ -64,14 +75,14 @@ public class BeanContainerImpl implements BeanContainer {
         @Override
         public BeanContainer.Instance<T> create() {
             try {
-                T instance = type.newInstance();
+                T instance = type.getDeclaredConstructor().newInstance();
                 return new BeanContainer.Instance<T>() {
                     @Override
                     public T get() {
                         return instance;
                     }
                 };
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 throw new RuntimeException(e);
             }
         }
