@@ -3,7 +3,6 @@ package io.quarkus.kubernetes.service.binding.runtime;
 import java.io.File;
 import java.io.FileFilter;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -30,6 +29,7 @@ public final class ServiceBinding {
     private final String provider;
     private final Map<String, String> properties;
     private final String type;
+    private final String bindingDirectory;
 
     public ServiceBinding(Path bindingDirectory) {
         this(bindingDirectory.getFileName().toString(), getFilenameToContentMap(bindingDirectory), bindingDirectory);
@@ -52,9 +52,10 @@ public final class ServiceBinding {
 
         if (type == null) {
             throw new IllegalArgumentException("Directory '" + bindingDirectory
-                    + "' does not represent a valid Service ServiceBinding directory as it does specify a type");
+                    + "' does not represent a valid Service ServiceBinding directory as it does not specify a type");
         }
 
+        this.bindingDirectory = bindingDirectory.toString();
         this.name = name;
         this.type = type;
         this.provider = provider;
@@ -83,7 +84,7 @@ public final class ServiceBinding {
             for (File f : files) {
                 try {
                     result.put(f.toPath().getFileName().toString(),
-                            new String(Files.readAllBytes(f.toPath()), StandardCharsets.UTF_8).trim());
+                            Files.readString(f.toPath()).trim());
                 } catch (IOException e) {
                     throw new IllegalStateException("Unable to read file '" + f + "'", e);
                 }
@@ -106,6 +107,10 @@ public final class ServiceBinding {
 
     public String getProvider() {
         return provider;
+    }
+
+    public String getBindingDirectory() {
+        return bindingDirectory;
     }
 
     @Override
