@@ -1,5 +1,8 @@
 package io.quarkus.vertx.runtime;
 
+import static io.quarkus.vertx.core.runtime.context.VertxContextSafetyToggle.setContextSafe;
+import static io.quarkus.vertx.core.runtime.context.VertxContextSafetyToggle.setCurrentContextSafe;
+
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
@@ -11,12 +14,14 @@ import java.util.function.Supplier;
 
 import org.jboss.logging.Logger;
 
+import io.quarkus.arc.CurrentContextFactory;
 import io.quarkus.runtime.LaunchMode;
 import io.quarkus.runtime.RuntimeValue;
 import io.quarkus.runtime.ShutdownContext;
 import io.quarkus.runtime.annotations.Recorder;
 import io.quarkus.runtime.configuration.ProfileManager;
 import io.quarkus.vertx.ConsumeEvent;
+import io.smallrye.common.vertx.VertxContext;
 import io.vertx.core.AsyncResult;
 import io.vertx.core.Context;
 import io.vertx.core.Handler;
@@ -26,6 +31,7 @@ import io.vertx.core.eventbus.EventBus;
 import io.vertx.core.eventbus.Message;
 import io.vertx.core.eventbus.MessageCodec;
 import io.vertx.core.eventbus.MessageConsumer;
+import io.vertx.core.impl.ContextInternal;
 import io.vertx.core.impl.VertxInternal;
 
 @Recorder
@@ -61,6 +67,10 @@ public class VertxRecorder {
         }
     }
 
+    public RuntimeValue<CurrentContextFactory> currentContextFactory() {
+        return new RuntimeValue<>(new VertxCurrentContextFactory());
+    }
+
     public static Vertx getVertx() {
         return vertx;
     }
@@ -81,7 +91,7 @@ public class VertxRecorder {
                 // Create a context attached to each consumer
                 // If we don't all consumers will use the same event loop and so published messages (dispatched to all
                 // consumers) delivery is serialized.
-                Context context = vi.createEventLoopContext();
+                ContextInternal context = vi.createEventLoopContext();
                 context.runOnContext(new Handler<Void>() {
                     @Override
                     public void handle(Void x) {
@@ -96,7 +106,10 @@ public class VertxRecorder {
                             @Override
                             public void handle(Message<Object> m) {
                                 if (invoker.isBlocking()) {
-                                    context.executeBlocking(new Handler<Promise<Object>>() {
+                                    // We need to create a duplicated context from the "context"
+                                    Context dup = VertxContext.getOrCreateDuplicatedContext(context);
+                                    setContextSafe(dup, true);
+                                    dup.executeBlocking(new Handler<Promise<Object>>() {
                                         @Override
                                         public void handle(Promise<Object> event) {
                                             try {
@@ -113,7 +126,11 @@ public class VertxRecorder {
                                         }
                                     }, invoker.isOrdered(), null);
                                 } else {
-                                    // Will run on the context used for the consumer registration
+                                    // Will run on the context used for the consumer registration.
+                                    // It's a duplicated context, but we need to mark it as safe.
+                                    // The safety comes from the fact that it's instantiated by Vert.x for every
+                                    // message.
+                                    setCurrentContextSafe(true);
                                     try {
                                         invoker.invoke(m);
                                     } catch (Exception e) {
@@ -208,7 +225,7 @@ public class VertxRecorder {
             Class<?> codec = codecEntry.getValue();
             try {
                 if (MessageCodec.class.isAssignableFrom(codec)) {
-                    MessageCodec messageCodec = (MessageCodec) codec.newInstance();
+                    MessageCodec messageCodec = (MessageCodec) codec.getDeclaredConstructor().newInstance();
                     if (isDevMode) {
                         // we need to unregister the codecs because in dev mode vert.x is not reloaded
                         // which means that if we don't unregister, we get an exception mentioning that the
@@ -219,7 +236,7 @@ public class VertxRecorder {
                 } else {
                     LOGGER.error(String.format("The codec %s does not inherit from MessageCodec ", target.toString()));
                 }
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 LOGGER.error("Cannot instantiate the MessageCodec " + target.toString(), e);
             }
         }
