@@ -1,20 +1,10 @@
 package io.quarkus.bootstrap.app;
 
-import io.quarkus.bootstrap.BootstrapConstants;
-import io.quarkus.bootstrap.classloading.ClassPathElement;
-import io.quarkus.bootstrap.classloading.ClassPathResource;
-import io.quarkus.bootstrap.classloading.FilteredClassPathElement;
-import io.quarkus.bootstrap.classloading.MemoryClassPathElement;
-import io.quarkus.bootstrap.classloading.QuarkusClassLoader;
-import io.quarkus.bootstrap.model.AppArtifact;
-import io.quarkus.bootstrap.model.AppArtifactKey;
-import io.quarkus.bootstrap.model.AppDependency;
-import io.quarkus.bootstrap.model.AppModel;
 import java.io.IOException;
 import java.io.Serializable;
 import java.nio.file.Path;
 import java.security.ProtectionDomain;
-import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -28,6 +18,18 @@ import java.util.function.Function;
 import java.util.jar.Manifest;
 import java.util.stream.Collectors;
 
+import io.quarkus.bootstrap.classloading.ClassPathElement;
+import io.quarkus.bootstrap.classloading.ClassPathResource;
+import io.quarkus.bootstrap.classloading.FilteredClassPathElement;
+import io.quarkus.bootstrap.classloading.MemoryClassPathElement;
+import io.quarkus.bootstrap.classloading.QuarkusClassLoader;
+import io.quarkus.bootstrap.model.ApplicationModel;
+import io.quarkus.maven.dependency.ArtifactKey;
+import io.quarkus.maven.dependency.DependencyFlags;
+import io.quarkus.maven.dependency.ResolvedDependency;
+import io.quarkus.paths.OpenPathTree;
+import io.quarkus.paths.PathTree;
+
 /**
  * The result of the curate step that is done by QuarkusBootstrap.
  *
@@ -37,6 +39,8 @@ import java.util.stream.Collectors;
  */
 public class CuratedApplication implements Serializable, AutoCloseable {
 
+    private static final long serialVersionUID = 7816596453653911149L;
+
     private static final String AUGMENTOR = "io.quarkus.runner.bootstrap.AugmentActionImpl";
 
     /**
@@ -45,7 +49,7 @@ public class CuratedApplication implements Serializable, AutoCloseable {
      *
      * This should not be used for hot reloadable elements
      */
-    private final Map<AppArtifact, List<ClassPathElement>> augmentationElements = new HashMap<>();
+    private final Map<ArtifactKey, ClassPathElement> augmentationElements = new HashMap<>();
 
     /**
      * The augmentation class loader.
@@ -61,7 +65,7 @@ public class CuratedApplication implements Serializable, AutoCloseable {
     private final CurationResult curationResult;
     private final ConfiguredClassLoading configuredClassLoading;
 
-    final AppModel appModel;
+    final ApplicationModel appModel;
 
     final AtomicInteger runtimeClassLoaderCount = new AtomicInteger();
 
@@ -69,24 +73,20 @@ public class CuratedApplication implements Serializable, AutoCloseable {
             ConfiguredClassLoading configuredClassLoading) {
         this.quarkusBootstrap = quarkusBootstrap;
         this.curationResult = curationResult;
-        this.appModel = curationResult.getAppModel();
+        this.appModel = curationResult.getApplicationModel();
         this.configuredClassLoading = configuredClassLoading;
     }
 
-    public AppModel getAppModel() {
+    public boolean isFlatClassPath() {
+        return configuredClassLoading.isFlatTestClassPath();
+    }
+
+    public ApplicationModel getApplicationModel() {
         return appModel;
     }
 
     public QuarkusBootstrap getQuarkusBootstrap() {
         return quarkusBootstrap;
-    }
-
-    public boolean hasUpdatedDeps() {
-        return curationResult.hasUpdatedDeps();
-    }
-
-    public List<AppDependency> getUpdatedDeps() {
-        return curationResult.getUpdatedDependencies();
     }
 
     public Object runInAugmentClassLoader(String consumerName, Map<String, Object> params) {
@@ -116,7 +116,9 @@ public class CuratedApplication implements Serializable, AutoCloseable {
     public AugmentAction createAugmentor(String functionName, Map<String, Object> props) {
         try {
             Class<?> augmentor = getAugmentClassLoader().loadClass(AUGMENTOR);
-            Function<Object, List<?>> function = (Function<Object, List<?>>) getAugmentClassLoader().loadClass(functionName)
+            Function<Object, List<?>> function = (Function<Object, List<?>>) getAugmentClassLoader()
+                    .loadClass(functionName)
+                    .getDeclaredConstructor()
                     .newInstance();
             List<?> res = function.apply(props);
             return (AugmentAction) augmentor.getConstructor(CuratedApplication.class, List.class).newInstance(this, res);
@@ -132,9 +134,11 @@ public class CuratedApplication implements Serializable, AutoCloseable {
             Thread.currentThread().setContextClassLoader(cl);
             Class<? extends BiConsumer<CuratedApplication, Map<String, Object>>> clazz = (Class<? extends BiConsumer<CuratedApplication, Map<String, Object>>>) cl
                     .loadClass(consumerName);
-            BiConsumer<CuratedApplication, Map<String, Object>> biConsumer = clazz.newInstance();
+            BiConsumer<CuratedApplication, Map<String, Object>> biConsumer = clazz.getDeclaredConstructor().newInstance();
             biConsumer.accept(this, params);
             return biConsumer;
+        } catch (RuntimeException e) {
+            throw e;
         } catch (Exception e) {
             throw new RuntimeException(e);
         } finally {
@@ -142,13 +146,13 @@ public class CuratedApplication implements Serializable, AutoCloseable {
         }
     }
 
-    private synchronized void processCpElement(AppArtifact artifact, Consumer<ClassPathElement> consumer) {
-        if (!artifact.getType().equals(BootstrapConstants.JAR)) {
+    private synchronized void processCpElement(ResolvedDependency artifact, Consumer<ClassPathElement> consumer) {
+        if (!artifact.isJar()) {
             //avoid the need for this sort of check in multiple places
             consumer.accept(ClassPathElement.EMPTY);
             return;
         }
-        List<String> filteredResources = configuredClassLoading.removedResources.get(artifact.getKey());
+        Collection<String> filteredResources = configuredClassLoading.getRemovedResources().get(artifact.getKey());
         if (filteredResources != null) {
             Consumer<ClassPathElement> old = consumer;
             consumer = new Consumer<ClassPathElement>() {
@@ -158,30 +162,28 @@ public class CuratedApplication implements Serializable, AutoCloseable {
                 }
             };
         }
-        List<ClassPathElement> cpeList = augmentationElements.get(artifact);
-        if (cpeList != null) {
-            for (ClassPathElement cpe : cpeList) {
-                consumer.accept(cpe);
-            }
+        ClassPathElement cpe = augmentationElements.get(artifact.getKey());
+        if (cpe != null) {
+            consumer.accept(cpe);
             return;
         }
-        cpeList = new ArrayList<>(2);
-        for (Path path : artifact.getPaths()) {
-            final ClassPathElement element = ClassPathElement.fromPath(path);
-            consumer.accept(element);
-            cpeList.add(element);
+        final PathTree contentTree = artifact.getContentTree();
+        if (contentTree.isEmpty()) {
+            consumer.accept(ClassPathElement.EMPTY);
+            return;
         }
-        augmentationElements.put(artifact, cpeList);
+        cpe = ClassPathElement.fromDependency(artifact);
+        consumer.accept(cpe);
+        augmentationElements.put(artifact.getKey(), cpe);
     }
 
-    private void addCpElement(QuarkusClassLoader.Builder builder, AppArtifact dep, ClassPathElement element) {
-        final AppArtifactKey key = dep.getKey();
-        if (appModel.getParentFirstArtifacts().contains(key)
-                || configuredClassLoading.parentFirstArtifacts.contains(dep.getKey())) {
+    private void addCpElement(QuarkusClassLoader.Builder builder, ResolvedDependency dep, ClassPathElement element) {
+        final ArtifactKey key = dep.getKey();
+        if (configuredClassLoading.isParentFirstArtifact(key)) {
             //we always load this from the parent if it is available, as this acts as a bridge between the running
             //app and the dev mode code
             builder.addParentFirstElement(element);
-        } else if (appModel.getLesserPriorityArtifacts().contains(key)) {
+        } else if (dep.isFlagSet(DependencyFlags.CLASSLOADER_LESSER_PRIORITY)) {
             builder.addLesserPriorityElement(element);
         }
         builder.addElement(element);
@@ -198,23 +200,27 @@ public class CuratedApplication implements Serializable, AutoCloseable {
             //we want a class loader that can load the deployment artifacts and all their dependencies, but not
             //any of the runtime artifacts, or user classes
             //this will load any deployment artifacts from the parent CL if they are present
-            for (AppDependency i : appModel.getFullDeploymentDeps()) {
-                if (configuredClassLoading.reloadableArtifacts.contains(i.getArtifact().getKey())) {
+            for (ResolvedDependency i : appModel.getDependencies()) {
+                if (configuredClassLoading.isRemovedArtifact(i.getKey())) {
+                    processCpElement(i, builder::addBannedElement);
                     continue;
                 }
-                processCpElement(i.getArtifact(), element -> addCpElement(builder, i.getArtifact(), element));
+                if (configuredClassLoading.isReloadableArtifact(i.getKey())) {
+                    continue;
+                }
+                processCpElement(i, element -> addCpElement(builder, i, element));
             }
 
             for (Path i : quarkusBootstrap.getAdditionalDeploymentArchives()) {
-                builder.addElement(ClassPathElement.fromPath(i));
+                builder.addElement(ClassPathElement.fromPath(i, false));
             }
             Map<String, byte[]> banned = new HashMap<>();
-            for (List<String> i : configuredClassLoading.removedResources.values()) {
+            for (Collection<String> i : configuredClassLoading.getRemovedResources().values()) {
                 for (String j : i) {
                     banned.put(j, new byte[0]);
                 }
             }
-            builder.addBannedElement(new MemoryClassPathElement(banned));
+            builder.addBannedElement(new MemoryClassPathElement(banned, false));
             augmentClassLoader = builder.build();
         }
         return augmentClassLoader;
@@ -237,16 +243,16 @@ public class CuratedApplication implements Serializable, AutoCloseable {
                     .setAssertionsEnabled(quarkusBootstrap.isAssertionsEnabled());
             builder.addClassLoaderEventListeners(quarkusBootstrap.getClassLoaderEventListeners());
 
-            if (quarkusBootstrap.getMode() == QuarkusBootstrap.Mode.TEST && quarkusBootstrap.isFlatClassPath()) {
+            if (configuredClassLoading.isFlatTestClassPath()) {
                 //in test mode we have everything in the base class loader
                 //there is no need to restart so there is no need for an additional CL
 
                 for (Path root : quarkusBootstrap.getApplicationRoot()) {
-                    builder.addElement(ClassPathElement.fromPath(root));
+                    builder.addElement(ClassPathElement.fromPath(root, true));
                 }
             } else {
                 for (Path root : quarkusBootstrap.getApplicationRoot()) {
-                    builder.addBannedElement(new ClassFilteredBannedElement(ClassPathElement.fromPath(root)));
+                    builder.addBannedElement(new ClassFilteredBannedElement(ClassPathElement.fromPath(root, true)));
                 }
             }
 
@@ -254,33 +260,43 @@ public class CuratedApplication implements Serializable, AutoCloseable {
             Set<Path> hotReloadPaths = new HashSet<>();
             for (AdditionalDependency i : quarkusBootstrap.getAdditionalApplicationArchives()) {
                 if (!i.isHotReloadable()) {
-                    for (Path root : i.getArchivePath()) {
-                        builder.addElement(ClassPathElement.fromPath(root));
+                    for (Path root : i.getResolvedPaths()) {
+                        builder.addElement(ClassPathElement.fromPath(root, true));
                     }
                 } else {
-                    for (Path root : i.getArchivePath()) {
+                    for (Path root : i.getResolvedPaths()) {
                         hotReloadPaths.add(root);
-                        builder.addBannedElement(new ClassFilteredBannedElement(ClassPathElement.fromPath(root)));
+                        builder.addBannedElement(new ClassFilteredBannedElement(ClassPathElement.fromPath(root, true)));
                     }
                 }
             }
-            builder.setResettableElement(new MemoryClassPathElement(Collections.emptyMap()));
+            for (Path i : configuredClassLoading.getAdditionalClasspathElements()) {
+                hotReloadPaths.add(i);
+                builder.addBannedElement(new ClassFilteredBannedElement(ClassPathElement.fromPath(i, true)));
+            }
+
+            builder.setResettableElement(new MemoryClassPathElement(Collections.emptyMap(), true));
             Map<String, byte[]> banned = new HashMap<>();
-            for (List<String> i : configuredClassLoading.removedResources.values()) {
+            for (Collection<String> i : configuredClassLoading.getRemovedResources().values()) {
                 for (String j : i) {
                     banned.put(j, new byte[0]);
                 }
             }
-            builder.addBannedElement(new MemoryClassPathElement(banned));
+            builder.addBannedElement(new MemoryClassPathElement(banned, true));
 
-            for (AppDependency dependency : appModel.getUserDependencies()) {
-                if (isHotReloadable(dependency.getArtifact(), hotReloadPaths)) {
+            for (ResolvedDependency dependency : appModel.getDependencies()) {
+                if (configuredClassLoading.isRemovedArtifact(dependency.getKey())) {
+                    processCpElement(dependency, builder::addBannedElement);
                     continue;
                 }
-                if (configuredClassLoading.reloadableArtifacts.contains(dependency.getArtifact().getKey())) {
+                if (!dependency.isRuntimeCp()
+                        || isHotReloadable(dependency, hotReloadPaths)
+                        || configuredClassLoading.isReloadableArtifact(dependency.getKey())
+                        || !configuredClassLoading.isFlatTestClassPath() && dependency.isReloadable()
+                                && appModel.getReloadableWorkspaceDependencies().contains(dependency.getKey())) {
                     continue;
                 }
-                processCpElement(dependency.getArtifact(), element -> addCpElement(builder, dependency.getArtifact(), element));
+                processCpElement(dependency, element -> addCpElement(builder, dependency, element));
             }
 
             baseRuntimeClassLoader = builder.build();
@@ -288,8 +304,8 @@ public class CuratedApplication implements Serializable, AutoCloseable {
         return baseRuntimeClassLoader;
     }
 
-    private static boolean isHotReloadable(AppArtifact a, Set<Path> hotReloadPaths) {
-        for (Path p : a.getPaths()) {
+    private static boolean isHotReloadable(ResolvedDependency a, Set<Path> hotReloadPaths) {
+        for (Path p : a.getContentTree().getRoots()) {
             if (hotReloadPaths.contains(p)) {
                 return true;
             }
@@ -307,21 +323,29 @@ public class CuratedApplication implements Serializable, AutoCloseable {
                 .setAggregateParentResources(true);
 
         for (Path root : quarkusBootstrap.getApplicationRoot()) {
-            builder.addElement(ClassPathElement.fromPath(root));
+            builder.addElement(ClassPathElement.fromPath(root, true));
         }
 
-        builder.setResettableElement(new MemoryClassPathElement(Collections.emptyMap()));
+        builder.setResettableElement(new MemoryClassPathElement(Collections.emptyMap(), false));
 
         //additional user class path elements first
         for (AdditionalDependency i : quarkusBootstrap.getAdditionalApplicationArchives()) {
-            for (Path root : i.getArchivePath()) {
-                builder.addElement(ClassPathElement.fromPath(root));
+            for (Path root : i.getResolvedPaths()) {
+                builder.addElement(ClassPathElement.fromPath(root, true));
             }
         }
-        for (AppDependency dependency : appModel.getUserDependencies()) {
-            if (configuredClassLoading.reloadableArtifacts.contains(dependency.getArtifact().getKey())) {
-                processCpElement(dependency.getArtifact(), element -> addCpElement(builder, dependency.getArtifact(), element));
+        for (ResolvedDependency dependency : appModel.getDependencies()) {
+            if (configuredClassLoading.isRemovedArtifact(dependency.getKey())) {
+                continue;
             }
+            if (dependency.isRuntimeCp() && dependency.isJar() &&
+                    (dependency.isReloadable() && appModel.getReloadableWorkspaceDependencies().contains(dependency.getKey()) ||
+                            configuredClassLoading.isReloadableArtifact(dependency.getKey()))) {
+                processCpElement(dependency, element -> addCpElement(builder, dependency, element));
+            }
+        }
+        for (Path root : configuredClassLoading.getAdditionalClasspathElements()) {
+            builder.addElement(ClassPathElement.fromPath(root, true));
         }
         return builder.build();
     }
@@ -341,24 +365,40 @@ public class CuratedApplication implements Serializable, AutoCloseable {
                 .setAggregateParentResources(true);
         builder.setTransformedClasses(transformedClasses);
 
-        builder.addElement(new MemoryClassPathElement(resources));
+        builder.addElement(new MemoryClassPathElement(resources, true));
         for (Path root : quarkusBootstrap.getApplicationRoot()) {
-            builder.addElement(ClassPathElement.fromPath(root));
+            builder.addElement(ClassPathElement.fromPath(root, true));
         }
 
         for (AdditionalDependency i : getQuarkusBootstrap().getAdditionalApplicationArchives()) {
             if (i.isHotReloadable()) {
-                for (Path root : i.getArchivePath()) {
-                    builder.addElement(ClassPathElement.fromPath(root));
+                for (Path root : i.getResolvedPaths()) {
+                    builder.addElement(ClassPathElement.fromPath(root, true));
                 }
             }
         }
-        for (AppDependency dependency : appModel.getUserDependencies()) {
-            if (configuredClassLoading.reloadableArtifacts.contains(dependency.getArtifact().getKey())) {
-                processCpElement(dependency.getArtifact(), element -> addCpElement(builder, dependency.getArtifact(), element));
+        for (ResolvedDependency dependency : appModel.getDependencies()) {
+            if (configuredClassLoading.isRemovedArtifact(dependency.getKey())) {
+                continue;
+            }
+            if (dependency.isRuntimeCp() && dependency.isJar() &&
+                    (dependency.isReloadable() && appModel.getReloadableWorkspaceDependencies().contains(dependency.getKey()) ||
+                            configuredClassLoading.isReloadableArtifact(dependency.getKey()))) {
+                processCpElement(dependency, element -> addCpElement(builder, dependency, element));
             }
         }
+        for (Path root : configuredClassLoading.getAdditionalClasspathElements()) {
+            builder.addElement(ClassPathElement.fromPath(root, true));
+        }
         return builder.build();
+    }
+
+    public boolean isReloadableArtifact(ArtifactKey key) {
+        return this.configuredClassLoading.isReloadableArtifact(key);
+    }
+
+    public boolean hasReloadableArtifacts() {
+        return this.configuredClassLoading.hasReloadableArtifacts();
     }
 
     @Override
@@ -369,15 +409,16 @@ public class CuratedApplication implements Serializable, AutoCloseable {
         if (baseRuntimeClassLoader != null) {
             baseRuntimeClassLoader.close();
         }
+        augmentationElements.clear();
     }
 
     /**
      * TODO: Fix everything in the universe to do loading properly
-     * 
+     *
      * This class exists because a lot of libraries do getClass().getClassLoader.getResource()
      * instead of using the context class loader, which breaks tests as these resources are present in the
      * top CL and not the base CL that is used to load libraries.
-     * 
+     *
      * This yucky yucky hack works around this, by allowing non-class files to be loaded parent first, so they
      * will be loaded from the application ClassLoader.
      *
@@ -393,6 +434,21 @@ public class CuratedApplication implements Serializable, AutoCloseable {
 
         ClassFilteredBannedElement(ClassPathElement delegate) {
             this.delegate = delegate;
+        }
+
+        @Override
+        public ArtifactKey getDependencyKey() {
+            return delegate.getDependencyKey();
+        }
+
+        @Override
+        public boolean isRuntime() {
+            return delegate.isRuntime();
+        }
+
+        @Override
+        public <T> T apply(Function<OpenPathTree, T> func) {
+            return delegate.apply(func);
         }
 
         @Override
