@@ -12,7 +12,6 @@ import static org.junit.jupiter.api.Assertions.fail;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.FileReader;
 import java.io.IOException;
@@ -20,14 +19,15 @@ import java.io.StringWriter;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Properties;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
@@ -39,11 +39,15 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import io.quarkus.bootstrap.model.CapabilityErrors;
+import io.quarkus.maven.it.continuoustesting.ContinuousTestingMavenTestUtils;
 import io.quarkus.maven.it.verifier.MavenProcessInvocationResult;
 import io.quarkus.maven.it.verifier.RunningInvoker;
 import io.quarkus.test.devmode.util.DevModeTestUtils;
+import io.restassured.RestAssured;
 
 /**
+ * Tests the quarkus:test mojo.
+ *
  * @author <a href="http://escoffier.me">Clement Escoffier</a>
  *         <p>
  *         NOTE to anyone diagnosing failures in this test, to run a single method use:
@@ -51,7 +55,45 @@ import io.quarkus.test.devmode.util.DevModeTestUtils;
  *         mvn install -Dit.test=DevMojoIT#methodName
  */
 @DisableForNative
-public class DevMojoIT extends RunAndCheckMojoTestBase {
+public class DevMojoIT extends LaunchMojoTestBase {
+
+    @Override
+    protected ContinuousTestingMavenTestUtils getTestingTestUtils() {
+        return new ContinuousTestingMavenTestUtils();
+    }
+
+    @Test
+    public void testFlattenedPomInTargetDir() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/pom-in-target-dir");
+        run(true);
+        assertThat(DevModeTestUtils.getHttpResponse("/hello")).isEqualTo("Hello from RESTEasy Reactive");
+    }
+
+    @Test
+    public void testConfigFactoryInAppModuleBannedInCodeGen() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/codegen-config-factory", "projects/codegen-config-factory-banned");
+        run(true);
+        assertThat(DevModeTestUtils.getHttpResponse("/codegen-config/acme-config-factory")).isEqualTo("n/a");
+        assertThat(DevModeTestUtils.getHttpResponse("/codegen-config/acme-config-provider")).isEqualTo("n/a");
+        assertThat(DevModeTestUtils.getHttpResponse("/runtime-config/acme-config-factory"))
+                .isEqualTo("org.acme.AppConfigSourceFactory");
+        assertThat(DevModeTestUtils.getHttpResponse("/runtime-config/acme-config-provider"))
+                .isEqualTo("org.acme.AppConfigSourceProvider");
+    }
+
+    @Test
+    public void testConfigFactoryInAppModuleFilteredInCodeGen() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/codegen-config-factory", "projects/codegen-config-factory-filtered");
+        run(true, "-Dconfig-factory.enabled");
+        assertThat(DevModeTestUtils.getHttpResponse("/codegen-config/acme-config-factory"))
+                .isEqualTo("org.acme.config.AcmeConfigSourceFactory");
+        assertThat(DevModeTestUtils.getHttpResponse("/codegen-config/acme-config-provider"))
+                .isEqualTo("org.acme.config.AcmeConfigSourceProvider");
+        assertThat(DevModeTestUtils.getHttpResponse("/runtime-config/acme-config-factory"))
+                .isEqualTo("org.acme.AppConfigSourceFactory");
+        assertThat(DevModeTestUtils.getHttpResponse("/runtime-config/acme-config-provider"))
+                .isEqualTo("org.acme.AppConfigSourceProvider");
+    }
 
     @Test
     public void testSystemPropertiesConfig() throws MavenInvocationException, IOException {
@@ -69,7 +111,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
 
     @Test
     void testClassLoaderLinkageError()
-            throws MavenInvocationException, IOException, InterruptedException {
+            throws MavenInvocationException, IOException {
         testDir = initProject("projects/classloader-linkage-error", "projects/classloader-linkage-error-dev");
         run(true);
         assertThat(DevModeTestUtils.getHttpResponse("/hello")).isEqualTo("hello");
@@ -85,27 +127,33 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         run(true);
 
         final CapabilityErrors error = new CapabilityErrors();
-        error.addConflict("sunshine", "org.acme:alt-quarkus-ext::jar:1.0-SNAPSHOT");
-        error.addConflict("sunshine", "org.acme:acme-quarkus-ext::jar:1.0-SNAPSHOT");
+        error.addConflict("sunshine", "org.acme:alt-quarkus-ext:1.0-SNAPSHOT");
+        error.addConflict("sunshine", "org.acme:acme-quarkus-ext:1.0-SNAPSHOT");
+        String response = DevModeTestUtils.getHttpResponse("/hello", true);
+        assertThat(response).contains(error.report());
+
+        filter(runnerPom, Map.of("<artifactId>acme-quarkus-ext</artifactId>", "<artifactId>alt-quarkus-ext</artifactId>"));
+        assertThat(DevModeTestUtils.getHttpResponse("/hello", false)).isEqualTo("hello");
+
+        filter(runnerPom, Map.of("<artifactId>alt-quarkus-ext</artifactId>", "<artifactId>acme-quarkus-ext</artifactId>"));
+        assertThat(DevModeTestUtils.getHttpResponse("/hello", false)).isEqualTo("hello");
+    }
+
+    @Test
+    public void testCapabilitiesMissing() throws MavenInvocationException, IOException {
+        testDir = getTargetDir("projects/capabilities-missing");
+        final File runnerPom = new File(testDir, "runner/pom.xml");
+        if (!runnerPom.exists()) {
+            fail("Failed to locate runner/pom.xml in " + testDir);
+        }
+        run(true);
+
+        final CapabilityErrors error = new CapabilityErrors();
+        error.addMissing("sunshine", "org.acme:acme-quarkus-ext:1.0-SNAPSHOT");
         String response = DevModeTestUtils.getHttpResponse("/hello", true);
         assertThat(response).contains(error.report());
 
         final StringWriter buf = new StringWriter();
-        try (BufferedWriter writer = new BufferedWriter(buf)) {
-            writer.write("        <dependency>");
-            writer.newLine();
-            writer.write("            <groupId>org.acme</groupId>");
-            writer.newLine();
-            writer.write("            <artifactId>acme-quarkus-ext</artifactId>");
-            writer.newLine();
-            writer.write("        </dependency>");
-            writer.newLine();
-        }
-        final String acmeDep = buf.toString();
-        filter(runnerPom, Collections.singletonMap(acmeDep, ""));
-        assertThat(DevModeTestUtils.getHttpResponse("/hello", false)).isEqualTo("hello");
-
-        buf.getBuffer().setLength(0);
         try (BufferedWriter writer = new BufferedWriter(buf)) {
             writer.write("        <dependency>");
             writer.newLine();
@@ -116,8 +164,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
             writer.write("        </dependency>");
             writer.newLine();
         }
-        final String altDep = buf.toString();
-        filter(runnerPom, Collections.singletonMap(acmeDep, altDep));
+        final String acmeDep = buf.toString();
+        filter(runnerPom, Collections.singletonMap("<!-- missing -->", acmeDep));
         assertThat(DevModeTestUtils.getHttpResponse("/hello", false)).isEqualTo("hello");
     }
 
@@ -141,10 +189,10 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         run(false, "-Dquarkus.args='1 2'");
 
         // Wait until this file exists
-        final File done = new File(testDir, "target/done.txt");
+        final File done = new File(testDir, "done.txt");
         await()
                 .pollDelay(1, TimeUnit.SECONDS)
-                .atMost(20, TimeUnit.MINUTES).until(() -> done.exists());
+                .atMost(20, TimeUnit.MINUTES).until(done::exists);
 
         // read the log and check the passed in args
         final File log = new File(testDir, "build-command-mode-app-args.log");
@@ -159,10 +207,10 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         run(false);
 
         // Wait until this file exists
-        final File done = new File(testDir, "target/done.txt");
+        final File done = new File(testDir, "done.txt");
         await()
                 .pollDelay(1, TimeUnit.SECONDS)
-                .atMost(20, TimeUnit.MINUTES).until(() -> done.exists());
+                .atMost(20, TimeUnit.MINUTES).until(done::exists);
 
         // read the log and check the passed in args
         final File log = new File(testDir, "build-command-mode-app-pom-args.log");
@@ -171,7 +219,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         assertThat(loggedArgs).isEqualTo("ARGS: [plugin, pom, config]");
     }
 
-    private String extractLoggedArgs(final File log) throws IOException, FileNotFoundException {
+    private String extractLoggedArgs(final File log) throws IOException {
         String loggedArgs = null;
         try (BufferedReader reader = new BufferedReader(new FileReader(log))) {
             String s;
@@ -201,7 +249,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         assertThat(profile).isEqualTo("dev");
 
         //make sure webjars work
-        DevModeTestUtils.getHttpResponse("webjars/bootstrap/4.6.0/css/bootstrap.min.css");
+        DevModeTestUtils.getHttpResponse("webjars/jquery-ui/1.13.0/jquery-ui.min.js");
 
         assertThatOutputWorksCorrectly(running.log());
 
@@ -276,12 +324,49 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
     }
 
     @Test
+    public void testCustomOutputDirSetInProfile() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/classic", "projects/project-classic-custom-output-dir");
+        runAndCheck("-PcustomOutputDir");
+    }
+
+    @Test
+    public void testThatNonExistentSrcDirCanBeAdded() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/classic", "projects/project-classic-run-java-change");
+
+        File sourceDir = new File(testDir, "src/main/java");
+        File sourceDirMoved = new File(testDir, "src/main/java-moved");
+        if (!sourceDir.renameTo(sourceDirMoved)) {
+            Assertions.fail("move failed");
+        }
+        //we need this to make run and check work
+        File hello = new File(testDir, "src/main/resources/META-INF/resources/app/hello");
+        hello.getParentFile().mkdir();
+        try (var o = new FileOutputStream(hello)) {
+            o.write("hello".getBytes(StandardCharsets.UTF_8));
+        }
+
+        runAndCheck();
+        hello.delete();
+        if (!DevModeTestUtils.getHttpResponse("/app/hello", 404)) {
+            Assertions.fail("expected resource to be deleted");
+        }
+        if (!sourceDirMoved.renameTo(sourceDir)) {
+            Assertions.fail("move failed");
+        }
+
+        // Wait until we get "hello"
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES).until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains("hello"));
+    }
+
+    @Test
     public void testThatInstrumentationBasedReloadWorks() throws MavenInvocationException, IOException {
-        testDir = initProject("projects/classic-inst", "projects/project-intrumentation-reload");
+        testDir = initProject("projects/classic-inst", "projects/project-instrumentation-reload");
         runAndCheck();
 
         // Enable instrumentation based reload to begin with
-        DevModeTestUtils.getHttpResponse("/app/enable");
+        RestAssured.post("/q/dev-v1/io.quarkus.quarkus-vertx-http/tests/toggle-instrumentation").then().statusCode(200);
 
         //if there is an instrumentation based reload this will stay the same
         String firstUuid = DevModeTestUtils.getHttpResponse("/app/uuid");
@@ -314,7 +399,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
 
         //now disable instrumentation based restart, and try again
         //change it back to hello
-        DevModeTestUtils.getHttpResponse("/app/disable");
+        RestAssured.post("/q/dev-v1/io.quarkus.quarkus-vertx-http/tests/toggle-instrumentation").then().statusCode(200);
         source = new File(testDir, "src/main/java/org/acme/HelloResource.java");
         filter(source, Collections.singletonMap("return \"" + uuid + "\";", "return \"hello\";"));
 
@@ -329,7 +414,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
 
         //now re-enable
         //and repeat
-        DevModeTestUtils.getHttpResponse("/app/enable");
+        RestAssured.post("/q/dev-v1/io.quarkus.quarkus-vertx-http/tests/toggle-instrumentation").then().statusCode(200);
         source = new File(testDir, "src/main/java/org/acme/HelloResource.java");
         filter(source, Collections.singletonMap("return \"hello\";", "return \"" + uuid + "\";"));
 
@@ -449,20 +534,31 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         testDir = getTargetDir("projects/project-with-extension");
         runAndCheck();
 
-        final List<String> extDepWarnings = Files.readAllLines(testDir.toPath().resolve("build-project-with-extension.log"))
-                .stream()
-                .filter(s -> s.startsWith(
-                        "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency "))
-                .collect(Collectors.toList());
-        assertTrue(extDepWarnings
-                .contains(
-                        "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency org.acme:acme-quarkus-ext will not be hot-reloadable"));
-        assertTrue(extDepWarnings
-                .contains(
-                        "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency org.acme:acme-common will not be hot-reloadable"));
-        assertTrue(extDepWarnings.contains(
-                "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency org.acme:acme-common-transitive will not be hot-reloadable"));
-        assertEquals(3, extDepWarnings.size());
+        final List<String> artifacts = getNonReloadableArtifacts(
+                Files.readAllLines(testDir.toPath().resolve("build-project-with-extension.log")));
+        assertTrue(artifacts.contains("- org.acme:acme-quarkus-ext:1.0-SNAPSHOT"));
+        assertTrue(artifacts.contains("- org.acme:acme-quarkus-ext-deployment:1.0-SNAPSHOT"));
+        assertTrue(artifacts.contains("- org.acme:acme-common:1.0-SNAPSHOT"));
+        assertTrue(artifacts.contains("- org.acme:acme-common-transitive:1.0-SNAPSHOT"));
+        assertEquals(4, artifacts.size());
+    }
+
+    protected List<String> getNonReloadableArtifacts(final List<String> log) {
+        final List<String> artifacts = new ArrayList<>();
+        boolean inWarn = false;
+        for (String line : log) {
+            if (inWarn) {
+                if (line.equals(
+                        "The artifacts above appear to be either dependencies of non-reloadable application dependencies or Quarkus extensions")) {
+                    break;
+                }
+                artifacts.add(line);
+            } else if (line.equals(
+                    "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Live reload was disabled for the following project artifacts:")) {
+                inWarn = true;
+            }
+        }
+        return artifacts;
     }
 
     @Test
@@ -470,21 +566,18 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         testDir = getTargetDir("projects/rest-client-custom-headers-extension");
         runAndCheck();
 
-        final List<String> extDepWarnings = Files
-                .readAllLines(testDir.toPath().resolve("build-rest-client-custom-headers-extension.log"))
-                .stream()
-                .filter(s -> s.startsWith(
-                        "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency "))
-                .collect(Collectors.toList());
-        assertTrue(extDepWarnings
-                .contains(
-                        "[WARNING] [io.quarkus.bootstrap.devmode.DependenciesFilter] Local Quarkus extension dependency org.acme:rest-client-custom-headers will not be hot-reloadable"));
+        final List<String> artifacts = getNonReloadableArtifacts(
+                Files.readAllLines(testDir.toPath().resolve("build-rest-client-custom-headers-extension.log")));
+        assertTrue(artifacts.contains("- org.acme:rest-client-custom-headers:1.0-SNAPSHOT"));
+        assertTrue(artifacts.contains("- org.acme:rest-client-custom-headers-deployment:1.0-SNAPSHOT"));
+        assertEquals(2, artifacts.size());
 
         assertThat(DevModeTestUtils.getHttpResponse("/app/frontend")).isEqualTo("CustomValue1 CustomValue2");
     }
 
     @Test
     public void testThatTheApplicationIsReloadedMultiModule() throws MavenInvocationException, IOException {
+        //we also check continuous testing
         testDir = initProject("projects/multimodule", "projects/multimodule-with-deps");
         runAndCheck();
 
@@ -493,6 +586,12 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
                 .pollDelay(100, TimeUnit.MILLISECONDS)
                 .atMost(5, TimeUnit.SECONDS)
                 .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/resourcesCount").equals("1"));
+
+        ContinuousTestingMavenTestUtils testingTestUtils = new ContinuousTestingMavenTestUtils();
+        ContinuousTestingMavenTestUtils.TestStatus results = testingTestUtils.waitForNextCompletion();
+
+        //check that the tests in both modules run
+        Assertions.assertEquals(2, results.getTestsPassed());
 
         // Edit the "Hello" message.
         File source = new File(testDir, "rest/src/main/java/org/acme/HelloResource.java");
@@ -508,6 +607,21 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
                 .pollDelay(100, TimeUnit.MILLISECONDS)
                 .pollInterval(1, TimeUnit.SECONDS)
                 .until(source::isFile);
+
+        results = testingTestUtils.waitForNextCompletion();
+
+        //make sure the test is failing now
+        Assertions.assertEquals(1, results.getTestsFailed());
+        //now modify the passing test
+        var testSource = new File(testDir, "rest/src/test/java/org/acme/test/SimpleTest.java");
+        filter(testSource, Collections.singletonMap("Assertions.assertTrue(true);", "Assertions.assertTrue(false);"));
+        results = testingTestUtils.waitForNextCompletion();
+        Assertions.assertEquals(2, results.getTotalTestsFailed());
+        //fix it again
+        filter(testSource, Collections.singletonMap("Assertions.assertTrue(false);", "Assertions.assertTrue(true);"));
+        results = testingTestUtils.waitForNextCompletion();
+        Assertions.assertEquals(1, results.getTotalTestsFailed(), "Failed, actual results " + results);
+        Assertions.assertEquals(1, results.getTotalTestsPassed(), "Failed, actual results " + results);
 
         filter(source, Collections.singletonMap(uuid, "carambar"));
 
@@ -609,10 +723,10 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         File source = new File(testDir, "src/main/java/org/acme/MyNewResource.java");
         String myNewResource = "package org.acme;\n" +
                 "\n" +
-                "import javax.ws.rs.GET;\n" +
-                "import javax.ws.rs.Path;\n" +
-                "import javax.ws.rs.Produces;\n" +
-                "import javax.ws.rs.core.MediaType;\n" +
+                "import jakarta.ws.rs.GET;\n" +
+                "import jakarta.ws.rs.Path;\n" +
+                "import jakarta.ws.rs.Produces;\n" +
+                "import jakarta.ws.rs.core.MediaType;\n" +
                 "\n" +
                 "@Path(\"/foo\")\n" +
                 "public class MyNewResource {\n" +
@@ -638,10 +752,10 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         File source = new File(testDir, "src/main/java/org/acme/ClassDeletionResource.java");
         String classDeletionResource = "package org.acme;\n" +
                 "\n" +
-                "import javax.ws.rs.GET;\n" +
-                "import javax.ws.rs.Path;\n" +
-                "import javax.ws.rs.Produces;\n" +
-                "import javax.ws.rs.core.MediaType;\n" +
+                "import jakarta.ws.rs.GET;\n" +
+                "import jakarta.ws.rs.Path;\n" +
+                "import jakarta.ws.rs.Produces;\n" +
+                "import jakarta.ws.rs.core.MediaType;\n" +
                 "\n" +
                 "@Path(\"/deletion\")\n" +
                 "public class ClassDeletionResource {\n" +
@@ -720,7 +834,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         running = new RunningInvoker(testDir, false);
         final Properties mvnRunProps = new Properties();
         mvnRunProps.setProperty("debug", "false");
-        running.execute(Arrays.asList("compile", "quarkus:dev"), Collections.emptyMap(), mvnRunProps);
+        running.execute(Arrays.asList("compile", "quarkus:dev", "-Dquarkus.analytics.disabled=true"), Collections.emptyMap(),
+                mvnRunProps);
 
         String resp = DevModeTestUtils.getHttpResponse();
 
@@ -753,7 +868,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         running = new RunningInvoker(testDir, false);
         final Properties mvnRunProps = new Properties();
         mvnRunProps.setProperty("debug", "false");
-        running.execute(Arrays.asList("compile", "quarkus:dev"), Collections.emptyMap(), mvnRunProps);
+        running.execute(Arrays.asList("compile", "quarkus:dev", "-Dquarkus.analytics.disabled=true"), Collections.emptyMap(),
+                mvnRunProps);
 
         String resp = DevModeTestUtils.getHttpResponse();
 
@@ -786,7 +902,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
     @Test
     public void testThatExternalConfigOverridesConfigInJar() throws MavenInvocationException, IOException {
         testDir = initProject("projects/classic", "projects/project-classic-external-config");
-        File configurationFile = new File(testDir, "target/config/application.properties");
+        File configurationFile = new File(testDir, "config/application.properties");
         assertThat(configurationFile).doesNotExist();
 
         String uuid = UUID.randomUUID().toString();
@@ -837,6 +953,25 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
                 .pollDelay(100, TimeUnit.MILLISECONDS)
                 .atMost(1, TimeUnit.MINUTES)
                 .until(() -> DevModeTestUtils.getHttpResponse("/lorem.txt", 404));
+    }
+
+    @Test
+    public void testThatConfigFileDeletionsAreDetected() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/dev-mode-file-deletion");
+        runAndCheck();
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/greetings").contains("Bonjour"));
+
+        File source = new File(testDir, "src/main/resources/application.properties");
+        FileUtils.delete(source);
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello/greetings").contains("Guten Morgen"));
     }
 
     @Test
@@ -962,7 +1097,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         File source = new File(testDir, "src/main/java/org/acme/MyBean.java");
         String content = "package org.acme;\n" +
                 "\n" +
-                "import javax.enterprise.context.ApplicationScoped;\n" +
+                "import jakarta.enterprise.context.ApplicationScoped;\n" +
                 "\n" +
                 "@ApplicationScoped\n" +
                 "public class MyBean {\n" +
@@ -1021,7 +1156,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         running = new RunningInvoker(testDir, false);
         final Properties mvnRunProps = new Properties();
         mvnRunProps.setProperty("debug", "false");
-        running.execute(Arrays.asList("compile", "quarkus:dev"), Collections.emptyMap(), mvnRunProps);
+        running.execute(Arrays.asList("compile", "quarkus:dev", "-Dquarkus.analytics.disabled=true"), Collections.emptyMap(),
+                mvnRunProps);
 
         String resp = DevModeTestUtils.getHttpResponse();
 
@@ -1063,7 +1199,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         await()
                 .pollDelay(100, TimeUnit.MILLISECONDS)
                 .atMost(30, TimeUnit.SECONDS)
-                .until(() -> running.log().contains("skipping quarkus:dev as this is assumed to be a support library"));
+                .until(() -> running.log().contains("Skipping quarkus:dev as this is assumed to be a support library"));
     }
 
     @Test
@@ -1071,7 +1207,7 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         testDir = initProject("projects/classic-no-build", "projects/classic-no-build-not-enforced");
         runAndCheck("-Dquarkus.enforceBuildGoal=false");
 
-        assertThat(running.log()).doesNotContain("skipping quarkus:dev as this is assumed to be a support library");
+        assertThat(running.log()).doesNotContain("Skipping quarkus:dev as this is assumed to be a support library");
     }
 
     @Test
@@ -1080,7 +1216,8 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         RunningInvoker invoker = new RunningInvoker(testDir, false);
 
         // to properly surface the problem of multiple classpath entries, we need to install the project to the local m2
-        MavenProcessInvocationResult installInvocation = invoker.execute(Arrays.asList("clean", "install", "-DskipTests"),
+        MavenProcessInvocationResult installInvocation = invoker.execute(
+                List.of("clean", "install", "-DskipTests", "-Dquarkus.analytics.disabled=true"),
                 Collections.emptyMap());
         assertThat(installInvocation.getProcess().waitFor(2, TimeUnit.MINUTES)).isTrue();
         assertThat(installInvocation.getExecutionException()).isNull();
@@ -1097,13 +1234,47 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
                 .until(() -> DevModeTestUtils.getHttpResponse("/cp/hello").equals("hello"));
 
         // test that we don't get multiple instances of a resource when loading from the ClassLoader
-        assertThat(DevModeTestUtils.getHttpResponse("/cp/resourcesCount")).isEqualTo("1");
+        assertThat(DevModeTestUtils.getHttpResponse("/cp/resourceCount/a.html")).isEqualTo("1");
+        assertThat(DevModeTestUtils.getHttpResponse("/cp/resourceCount/entry")).isEqualTo("2");
     }
 
     @Test
     public void testThatDependencyInParentIsEvaluated() throws IOException, MavenInvocationException {
         testDir = initProject("projects/multimodule-parent-dep");
         runAndCheck();
+    }
+
+    @Test
+    public void testModuleCompileOrder() throws IOException, MavenInvocationException {
+        testDir = initProject("projects/multimodule-parent-dep", "projects/multimodule-compile-order");
+        runAndCheck("-Dquarkus.bootstrap.effective-model-builder");
+
+        assertThat(DevModeTestUtils.getHttpResponse("/app/hello/")).isEqualTo("hello");
+
+        // modify classes in all the modules and make sure they are compiled in a correct order
+        File resource = new File(testDir, "level0/src/main/java/org/acme/level0/Level0Service.java");
+        filter(resource, Collections.singletonMap("getGreeting()", "getGreeting(String name)"));
+        filter(resource, Collections.singletonMap("return greeting;", "return greeting + \" \" + name;"));
+
+        resource = new File(testDir, "level1/src/main/java/org/acme/level1/Level1Service.java");
+        filter(resource, Collections.singletonMap("getGreetingFromLevel0()", "getGreetingFromLevel0(String name)"));
+        filter(resource, Collections.singletonMap("level0Service.getGreeting()", "level0Service.getGreeting(name)"));
+
+        resource = new File(testDir, "level2/submodule/src/main/java/org/acme/level2/submodule/Level2Service.java");
+        filter(resource, Collections.singletonMap("getGreetingFromLevel1()", "getGreetingFromLevel1(String name)"));
+        filter(resource,
+                Collections.singletonMap("level1Service.getGreetingFromLevel0()", "level1Service.getGreetingFromLevel0(name)"));
+
+        resource = new File(testDir, "runner/src/main/java/org/acme/rest/HelloResource.java");
+        filter(resource, Collections.singletonMap("level0Service.getGreeting()",
+                "level0Service.getGreeting(\"world\")"));
+        filter(resource, Collections.singletonMap("level2Service.getGreetingFromLevel1()",
+                "level2Service.getGreetingFromLevel1(\"world\")"));
+
+        await()
+                .pollDelay(300, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/app/hello").contains("hello world"));
     }
 
     @Test
@@ -1124,5 +1295,154 @@ public class DevMojoIT extends RunAndCheckMojoTestBase {
         runAndCheck();
         assertThat(DevModeTestUtils.getHttpResponse("/app/hello/")).isEqualTo("hello");
         assertThat(DevModeTestUtils.getHttpResponse("/app/hello/applicationName")).isEqualTo("myapp");
+    }
+
+    @Test
+    public void testMultiJarModuleDevModeMocks() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/multijar-module", "projects/multijar-module-devmode-mocks");
+        run(false, "clean", "package", "-DskipTests", "-Dqdev");
+
+        String greeting = DevModeTestUtils.getHttpResponse("/hello");
+        assertThat(greeting).contains("acme other mock-service");
+
+        // Update TestBean
+        File resource = new File(testDir, "beans/src/test/java/org/acme/testlib/mock/MockService.java");
+        filter(resource, Collections.singletonMap("return \"mock-service\";", "return \"mock-service!\";"));
+        await()
+                .pollDelay(300, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/hello").contains("acme other mock-service!"));
+
+        // Update AcmeBean
+        resource = new File(testDir, "beans/src/main/java/org/acme/AcmeBean.java");
+        filter(resource, Collections.singletonMap("return \"acme\";", "return \"acme!\";"));
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/hello").contains("acme! other mock-service!"));
+
+        // Update Other bean
+        resource = new File(testDir, "beans/src/main/java/org/acme/Other.java");
+        filter(resource, Collections.singletonMap("return \"other\";", "return \"other!\";"));
+        await()
+                .pollDelay(300, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/hello").contains("acme! other! mock-service!"));
+    }
+
+    @Test
+    public void testMultiJarModuleDevMode() throws MavenInvocationException, IOException {
+        testDir = initProject("projects/multijar-module", "projects/multijar-module-devmode");
+        run(false, "clean", "package", "-DskipTests");
+
+        String greeting = DevModeTestUtils.getHttpResponse("/hello");
+        assertThat(greeting).contains("acme other acme-service");
+
+        // Update TestBean
+        File resource = new File(testDir, "beans/src/main/java/org/acme/AcmeService.java");
+        filter(resource, Collections.singletonMap("return \"acme-service\";", "return \"acme-service!\";"));
+        await()
+                .pollDelay(300, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/hello").contains("acme other acme-service!"));
+
+        // Update AcmeBean
+        resource = new File(testDir, "beans/src/main/java/org/acme/AcmeBean.java");
+        filter(resource, Collections.singletonMap("return \"acme\";", "return \"acme!\";"));
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/hello").contains("acme! other acme-service!"));
+
+        // Update Other bean
+        resource = new File(testDir, "beans/src/main/java/org/acme/Other.java");
+        filter(resource, Collections.singletonMap("return \"other\";", "return \"other!\";"));
+        await()
+                .pollDelay(300, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/hello").contains("acme! other! acme-service!"));
+    }
+
+    @Test
+    public void testThatWatchedAbsolutePathsAreNotDeleted() throws MavenInvocationException, IOException {
+        // for reference https://github.com/quarkusio/quarkus/issues/25667
+        // .env files got deleted on dev mode restarts
+        testDir = initProject("projects/no-resource-root", "projects/no-resource-root-run");
+        run(true);
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/hello").contains("Servus"));
+
+        // Update the .env
+        File source = new File(testDir, ".env");
+        FileUtils.write(source, "GREETING=Hallo", "UTF-8");
+
+        assertTrue(source.exists());
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/hello").contains("Hallo"));
+
+        assertTrue(source.exists());
+    }
+
+    @Test
+    public void testExternalReloadableArtifacts() throws Exception {
+        final String rootProjectPath = "projects/external-reloadable-artifacts";
+
+        // Set up the external project
+        final File externalJarDir = initProject(rootProjectPath + "/external-lib");
+
+        // Clean and install the external JAR in local repository (.m2)
+        install(externalJarDir, true);
+
+        // Set up the main project that uses the external dependency
+        this.testDir = initProject(rootProjectPath + "/app");
+
+        // Run quarkus:dev process
+        run(true);
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/hello").contains("Hello"));
+
+        final File greetingJava = externalJarDir.toPath().resolve("src").resolve("main")
+                .resolve("java").resolve("org").resolve("acme").resolve("lib")
+                .resolve("Greeting.java").toFile();
+        assertThat(greetingJava).exists();
+
+        // Uncomment the method bonjour() in Greeting.java
+        filter(greetingJava, Map.of("/*", "", "*/", ""));
+        install(externalJarDir, false);
+
+        final File greetingResourceJava = this.testDir.toPath().resolve("src").resolve("main")
+                .resolve("java").resolve("org").resolve("acme")
+                .resolve("GreetingResource.java").toFile();
+        assertThat(greetingResourceJava).exists();
+
+        // Update the GreetingResource.java to call the Greeting.bonjour() method
+        final String greetingBonjourCall = "Greeting.bonjour()";
+        filter(greetingResourceJava, Map.of("Greeting.hello()", greetingBonjourCall));
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/hello").contains("Bonjour"));
+
+        // Change bonjour() method content in Greeting.java
+        filter(greetingJava, Map.of("Bonjour", "Bonjour!"));
+        install(externalJarDir, false);
+
+        // Change GreetingResource.java endpoint response to upper case letters
+        filter(greetingResourceJava, Map.of(greetingBonjourCall, greetingBonjourCall.concat(".toUpperCase()")));
+
+        await()
+                .pollDelay(100, TimeUnit.MILLISECONDS)
+                .atMost(1, TimeUnit.MINUTES)
+                .until(() -> DevModeTestUtils.getHttpResponse("/hello").contains("BONJOUR!"));
     }
 }
