@@ -12,8 +12,10 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
+import java.util.jar.JarFile;
 import java.util.jar.JarInputStream;
 import java.util.jar.Manifest;
 import java.util.zip.ZipEntry;
@@ -33,13 +35,47 @@ public class PackageIT extends MojoTestBase {
     private File testDir;
 
     @Test
-    public void testUberJarMavenPluginConfiguration()
-            throws MavenInvocationException, IOException, InterruptedException {
-        testDir = initProject("projects/uberjar-maven-plugin-config");
+    public void testPluginClasspathConfig() throws Exception {
+        testDir = initProject("projects/test-plugin-classpath-config");
         running = new RunningInvoker(testDir, false);
         final MavenProcessInvocationResult result = running.execute(Collections.singletonList("package"),
                 Collections.emptyMap());
         assertThat(result.getProcess().waitFor()).isEqualTo(0);
+    }
+
+    @Test
+    public void testExtensionRemovedResources() throws Exception {
+        testDir = initProject("projects/extension-removed-resources");
+        running = new RunningInvoker(testDir, false);
+        final MavenProcessInvocationResult result = running.execute(List.of("verify"), Map.of());
+        assertThat(result.getProcess().waitFor()).isEqualTo(0);
+    }
+
+    @Test
+    public void testExtensionTestWithNoMain() throws Exception {
+        testDir = initProject("projects/extension-test-with-no-main");
+        running = new RunningInvoker(testDir, false);
+        final MavenProcessInvocationResult result = running.execute(List.of("verify"), Map.of());
+        assertThat(result.getProcess().waitFor()).isEqualTo(0);
+    }
+
+    @Test
+    public void testUberJarMavenPluginConfiguration()
+            throws MavenInvocationException, IOException, InterruptedException {
+        testDir = initProject("projects/uberjar-maven-plugin-config");
+        running = new RunningInvoker(testDir, false);
+        final MavenProcessInvocationResult result = running.execute(List.of("install", "-DskipTests"), Map.of());
+        assertThat(result.getProcess().waitFor()).isEqualTo(0);
+
+        final Path localRunner = getTargetDir().toPath().resolve("acme-quarkus-runner.jar");
+        assertThat(localRunner).exists();
+
+        // make sure the runner jar was attached, there was a bug of the runner jar not being attached when the
+        // finalName option in the Quarkus plugin didn't match the finalName ocnfigured in the POM's build section
+        final Path installedRunner = running.getLocalRepositoryDirectory().toPath().resolve("org").resolve("acme")
+                .resolve("acme")
+                .resolve("1.0-SNAPSHOT").resolve("acme-1.0-SNAPSHOT-runner.jar");
+        assertThat(installedRunner).exists();
 
         verifyUberJar();
     }
@@ -87,7 +123,7 @@ public class PackageIT extends MojoTestBase {
 
         running = new RunningInvoker(testDir, false);
         // we do want to run the tests too
-        final MavenProcessInvocationResult result = running.execute(Collections.singletonList("package"),
+        final MavenProcessInvocationResult result = running.execute(List.of("package"),
                 Collections.emptyMap());
 
         assertThat(result.getProcess().waitFor()).isEqualTo(0);
@@ -112,8 +148,8 @@ public class PackageIT extends MojoTestBase {
         p.setProperty("quarkus.package.type", "uber-jar");
 
         running = new RunningInvoker(testDir, false);
-        final MavenProcessInvocationResult result = running.execute(Collections.singletonList("package"),
-                Collections.emptyMap(), p);
+        final MavenProcessInvocationResult result = running.execute(List.of("package"),
+                Map.of(), p);
         assertThat(result.getProcess().waitFor()).isEqualTo(0);
 
         verifyUberJar();
@@ -124,8 +160,43 @@ public class PackageIT extends MojoTestBase {
         List<File> jars = getFilesEndingWith(targetDir, ".jar");
         assertThat(jars).hasSize(1);
         assertThat(getNumberOfFilesEndingWith(targetDir, ".original")).isEqualTo(1);
+        File uberJar = jars.get(0);
+        assertMultiReleaseJar(uberJar);
+        ensureManifestOfJarIsReadableByJarInputStream(uberJar);
+    }
 
-        ensureManifestOfJarIsReadableByJarInputStream(jars.get(0));
+    protected void assertMultiReleaseJar(File uberJar) throws IOException {
+        try (JarFile jarFile = new JarFile(uberJar)) {
+            // we expect this uber jar to be a multi-release jar since one of its
+            // dependencies (smallrye-classloader artifact), from which we composed this uber-jar,
+            // is a multi-release jar
+            Assertions.assertTrue(jarFile.isMultiRelease(), "uber-jar " + uberJar
+                    + " was expected to be a multi-release jar but wasn't");
+        }
+    }
+
+    @Test
+    public void testUberJarWithoutRunnerSuffix()
+            throws Exception {
+        testDir = initProject("projects/uberjar-check", "projects/uberjar-runner-suffix-off");
+
+        Properties p = new Properties();
+        p.setProperty("quarkus.package.type", "uber-jar");
+        p.setProperty("quarkus.package.add-runner-suffix", "false");
+
+        running = new RunningInvoker(testDir, false);
+        final MavenProcessInvocationResult result = running.execute(List.of("-DskipTests", "package"),
+                Map.of(), p);
+        assertThat(result.getProcess().waitFor()).isEqualTo(0);
+
+        final File targetDir = getTargetDir();
+        List<File> jars = getFilesEndingWith(targetDir, ".jar");
+        assertThat(jars).hasSize(1);
+        File jarFile = jars.get(0);
+        assertThat(jarFile.getName()).isEqualTo("acme-1.0-SNAPSHOT.jar");
+
+        assertMultiReleaseJar(jarFile);
+        ensureManifestOfJarIsReadableByJarInputStream(jarFile);
     }
 
     @Test
@@ -273,6 +344,18 @@ public class PackageIT extends MojoTestBase {
                 .isDirectoryContaining(p -> "native-image.args".equals(p.getFileName().toString()))
                 .isDirectoryContaining(p -> "acme-1.0-SNAPSHOT-runner.jar".equals(p.getFileName().toString()));
 
+    }
+
+    @Test
+    public void testMultiJarModulesPackage() throws Exception {
+        testDir = initProject("projects/multijar-module", "projects/multijar-module-package");
+
+        running = new RunningInvoker(testDir, false);
+        final MavenProcessInvocationResult result = running.execute(
+                Arrays.asList("package"),
+                Collections.emptyMap());
+
+        assertThat(result.getProcess().waitFor()).isEqualTo(0);
     }
 
     private int getNumberOfFilesEndingWith(File dir, String suffix) {
